--- a/GlassRod/GlassRod.csproj
+++ b/GlassRod/GlassRod.csproj
@@ -42,9 +42,8 @@
   <ItemGroup>
     <Compile Include="HotRodUtils.cs" />
     <Compile Include="OpPing.cs" />
-    <Compile Include="RequestHeader.cs" />
+    <Compile Include="Header.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResponseHeader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
