--- a/GlassRod/GlassRod.csproj
+++ b/GlassRod/GlassRod.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -41,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HotRodUtils.cs" />
+    <Compile Include="MurMurHash3.cs" />
     <Compile Include="OpGet.cs" />
     <Compile Include="OpPing.cs" />
     <Compile Include="Header.cs" />
